--- a/Common/Languages/English/Keyed/Buttons.xml
+++ b/Common/Languages/English/Keyed/Buttons.xml
@@ -48,4 +48,8 @@
     <TKUtils.Buttons.Enable>Enable</TKUtils.Buttons.Enable>
     <TKUtils.Buttons.Delete>Delete</TKUtils.Buttons.Delete>
     <TKUtils.Buttons.AreYouSure>Are you sure?</TKUtils.Buttons.AreYouSure>
+    <TKUtils.Buttons.EditStorytellerPacks>Storyteller packs</TKUtils.Buttons.EditStorytellerPacks>
+    <TKUtils.Buttons.NewToken>New token</TKUtils.Buttons.NewToken>
+    <TKUtils.Buttons.Edit>Edit</TKUtils.Buttons.Edit>
+    <TKUtils.Buttons.SameAsChannel>Same as channel</TKUtils.Buttons.SameAsChannel>
 </LanguageData>
