--- a/Common/Languages/English/Keyed/Fields.xml
+++ b/Common/Languages/English/Keyed/Fields.xml
@@ -24,6 +24,7 @@
     <TKUtils.Fields.Weight>Purchase weight</TKUtils.Fields.Weight>
     <TKUtils.Fields.KarmaType>Karma type</TKUtils.Fields.KarmaType>
     <TKUtils.Fields.State>Is enabled?</TKUtils.Fields.State>
+    <TKUtils.Fields.Technology>Tech level</TKUtils.Fields.Technology>
     <TKUtils.Fields.Mod>Mod</TKUtils.Fields.Mod>
     <TKUtils.Fields.Wager>Maximum coin wager</TKUtils.Fields.Wager>
     <TKUtils.Fields.Price>Price</TKUtils.Fields.Price>
@@ -58,6 +59,7 @@
     <TKUtils.Fields.CategorySearch>Category search</TKUtils.Fields.CategorySearch>
     <TKUtils.Fields.HasSettings>Has settings?</TKUtils.Fields.HasSettings>
     <TKUtils.Fields.Class>Is class?</TKUtils.Fields.Class>
+    <TKUtils.Fields.Animal>Is animal?</TKUtils.Fields.Animal>
     <TKUtils.Fields.RequiresResearch>Should items be researched before being buyable?</TKUtils.Fields.RequiresResearch>
     <TKUtils.Fields.TraitLimit>Maximum traits</TKUtils.Fields.TraitLimit>
     <TKUtils.Fields.LevelSkillMultiplier>XP multiplier</TKUtils.Fields.LevelSkillMultiplier>
@@ -68,4 +70,15 @@
     <TKUtils.Fields.Seconds>second(s)</TKUtils.Fields.Seconds>
     <TKUtils.Fields.Minutes>minute(s)</TKUtils.Fields.Minutes>
     <TKUtils.Fields.Hours>hour(s)</TKUtils.Fields.Hours>
+    <TKUtils.Fields.GlobalCooldown>Command cooldown (seconds)</TKUtils.Fields.GlobalCooldown>
+    <TKUtils.Fields.LocalCooldown>Per-user cooldown (seconds)</TKUtils.Fields.LocalCooldown>
+    <TKUtils.Fields.DefaultValue>&lt;b&gt;&lt;i&gt;Default: {0}&lt;/i&gt;&lt;/b&gt;</TKUtils.Fields.DefaultValue>
+    
+    <TKUtils.Fields.Token>OAuth token</TKUtils.Fields.Token>
+    <TKUtils.Fields.BotUsername>Bot username</TKUtils.Fields.BotUsername>
+    <TKUtils.Fields.Channel>Channel</TKUtils.Fields.Channel>
+    <TKUtils.Fields.AutoConnect>Auto connect on startup</TKUtils.Fields.AutoConnect>
+    <TKUtils.Fields.AllowWhispers>Allow viewers to whisper</TKUtils.Fields.AllowWhispers>
+    <TKUtils.Fields.ForceWhispers>Force viewers to whisper</TKUtils.Fields.ForceWhispers>
+    <TKUtils.Fields.SendConnectionMessage>Send connection message</TKUtils.Fields.SendConnectionMessage>
 </LanguageData>
